--- a/contact.ejs
+++ b/contact.ejs
@@ -1,10 +1,4 @@
-
 <%- include("partials/header"); -%>
-
-
-    <h1><%=title%></h1>
-    <p><%=content%></p>
-
-
-
+    <h1>Contact</h1>
+    <p> <%= contactContent %> </p>
 <%- include("partials/footer"); -%>
